feat(build): Dockerize app and add CI/CD for PostgreSQL
This change introduces containerized deployment, a GitHub Actions workflow, and transitions the database to PostgreSQL, enhancing development and production setup with proper environment configuration, updated dependencies, and test profiles.